change in log.html

--- a/log.html
+++ b/log.html
@@ -6,8 +6,8 @@
     <title>Login Page</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
+            font-family: 'Roboto', sans-serif;
+            background: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -15,34 +15,52 @@
             margin: 0;
         }
         .login-container {
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 40px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+            max-width: 400px;
+            width: 100%;
+            text-align: center;
         }
         .login-container h2 {
             margin-bottom: 20px;
+            font-size: 24px;
+            color: #333;
         }
         .login-container input {
             width: 100%;
-            padding: 10px;
+            padding: 15px;
             margin: 10px 0;
             border: 1px solid #ccc;
-            border-radius: 3px;
+            border-radius: 5px;
+            font-size: 16px;
         }
         .login-container button {
             width: 100%;
-            padding: 10px;
-            background-color: #4CAF50;
+            padding: 15px;
+            background-color: #3498db;
             color: white;
             border: none;
-            border-radius: 3px;
+            border-radius: 5px;
             cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s;
         }
         .login-container button:hover {
-            background-color: #45a049;
+            background-color: #2980b9;
+        }
+        .login-container p {
+            margin-top: 20px;
+            font-size: 14px;
+            color: #666;
+        }
+        .login-container a {
+            color: #3498db;
+            text-decoration: none;
         }
     </style>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="login-container">
@@ -51,6 +69,7 @@
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
+            <p>Don't have an account? <a href="#">Sign up</a></p>
         </form>
     </div>
 </body>
