--- a/log.html
+++ b/log.html
@@ -69,7 +69,7 @@
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
-            <p>Don't have an account? <a href="#">Sign up</a></p>
+            <p>Don't have an account? <a href="signup.html">Sign up</a></p>
         </form>
     </div>
 </body>
