--- a/signup.html
+++ b/signup.html
@@ -70,7 +70,7 @@
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Sign Up</button>
-            <p>Already have an account? <a href="#">Login</a></p>
+            <p>Already have an account? <a href="log.html">Login</a></p>
         </form>
     </div>
 </body>
