--- a/signup.html
+++ b/signup.html
@@ -69,7 +69,7 @@
             <input type="text" name="username" placeholder="Username" required>
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
-            <button type="submit">Sign Up</button>
+            <button type="submit">Sign up</button>
             <p>Already have an account? <a href="log.html">Login</a></p>
         </form>
     </div>
